@@ -4,6 +4,7 @@ Release 2.1:
   - Activate option: fontchooser for editorpane.
   - Introduce option: antialias on/off.
   - Doubleclick on folder -> Diff all nodes contained in that folder.
+  - Don't open already opened panels.
 
 Release 2.0:
 - Implement directory diff.
